Revision history for Dist::Zilla::PluginBundle::YANICK

{{$NEXT}}

0.0.1     2010-12-21 10:19:44 America/Montreal

    * First release on an unsuspecting world.
